Creando seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -78,13 +78,30 @@
               </p>
 
               <div class="socials">
-                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-twitch"></ion-icon></a>
-                <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/carlos-guzman-37a7311b2/"
+                  ><ion-icon name="logo-linkedin"></ion-icon
+                ></a>
+                <a target="_blank" href="https://www.instagram.com/l_shaggy_l/"
+                  ><ion-icon name="logo-instagram"></ion-icon
+                ></a>
+                <a target="_blank" href="https://www.twitch.tv/l_shaggy"
+                  ><ion-icon name="logo-twitch"></ion-icon
+                ></a>
+                <a target="_blank" href="https://github.com/LShaggyo"
+                  ><ion-icon name="logo-github"></ion-icon
+                ></a>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+    </div>
+    <div class="container-about-me">
+      <section class="about-me">
+        <div class="content-about-me">
+          <h2 class="title-about-me">Quien Soy?</h2>
         </div>
       </section>
     </div>
