Agregando Img y texto a Seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
       <section class="about-me">
         <div class="content-about-me">
           <h2 class="title-about-me">Quien Soy?</h2>
-        </div>
+          <img src="./assets/img/img-profile" alt="Foto de perfil de Carlos Guzman" class="profile">
+          <p class="text-who-iA">
+
+          </p>m
+        </di>
       </section>
     </div>
   </main>
