Agregando descripcion a sobre mi

--- a/index.html
+++ b/index.html
@@ -102,11 +102,92 @@
       <section class="about-me">
         <div class="content-about-me">
           <h2 class="title-about-me">Quien Soy?</h2>
-          <img src="./assets/img/img-profile" alt="Foto de perfil de Carlos Guzman" class="profile">
-          <p class="text-who-iA">
-
-          </p>m
-        </di>
+          <img
+            src="./assets/img/img-profile"
+            alt="Foto de perfil de Carlos Guzman"
+            class="profile"
+          />
+          <p class="text-i-am">
+            Soy <span>Carlos Guzmán</span>, estudiante de Ing. Informática y
+            amante de la tecnología y los videojuegos. Mi portafolio refleja mi
+            pasión por los juegos y mi habilidad en programación. ¡Explora mis
+            proyectos y descubre mi creatividad en el mundo de la tecnología!
+          </p>
+        </div>
+        <div class="personal-row">
+          <div class="personal-col">
+            <h3>Datos Personales</h3>
+            <ul>
+              <li>
+                <strong>Cumpleaños</strong>
+                <p>18-09-1991</p>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <strong>Teléfono</strong>
+                <p>+5697887xxxx</p>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <strong>Email</strong>
+                <p>devshaggycar@gmail.com</p>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <strong>Dirección</strong>
+                <p>Antofagasta, ChileM</p>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <strong>Cargo</strong>
+                <p>Mantenedor Mina, Minera Antucoya</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="hobbies-col">
+          <div class="container-hobbies"></div>
+          <div class="hobbies">
+            <ion-icon name="airplane-outline"></ion-icon>
+            <span>Viajar</span>
+          </div>
+          <div class="hobbies">
+            <ion-icon name="game-controller-outline"></ion-icon>
+            <span>Juegos</span>
+          </div>
+          <div class="hobbies">
+            <ion-icon name="musical-notes-outline"></ion-icon>
+            <span>Música</span>
+          </div>
+          <div class="hobbies">
+            <ion-icon name="desktop-outline"></ion-icon>
+            <span>Computadores</span>
+          </div>
+          <div>
+            <ion-icon name="football-outline"></ion-icon>
+            <span>Deportes</span>
+          </div>
+          <div>
+            <ion-icon name="logo-apple"></ion-icon>
+            <span>Mac Os</span>
+          </div>
+          <div>
+            <ion-icon name="code-slash-outline"></ion-icon>
+            <span>Programación</span>
+          </div>
+          <div>
+            <ion-icon name="book-outline"></ion-icon>
+            <span>Libros</span>
+          </div>
+          <div>
+            <ion-icon name="logo-tux"></ion-icon>
+            <span>Linux</span>
+          </div>
+        </div>
       </section>
     </div>
   </main>
