--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
   </head>
+  <body>
   <header>
     <div class="container-name">
       <section id="hidden-name">
@@ -108,7 +109,7 @@
             class="profile"
           />
           <p class="text-i-am">
-            Soy <span>Carlos Guzmán</span>, estudiante de Ing. Informática y
+            Soy <span>Carlos Guzmán</span>, estudiante de Ing. Informática,
             amante de la tecnología y los videojuegos. Mi portafolio refleja mi
             pasión por los juegos y mi habilidad en programación. ¡Explora mis
             proyectos y descubre mi creatividad en el mundo de la tecnología!
@@ -191,8 +192,8 @@
       </section>
     </div>
   </main>
-
-  <body>
+</body>
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -207,5 +208,5 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
     <script src="./assets/js/script.js"></script>
-  </body>
+  </b>
 </html>
