Creando estilo seccion sobre mi

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <div class="container-nav">
       <section id="hidden-nav">
         <nav class="navbar">
-          <a href="#home">
+          <a href="#container-home">
             <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
             <p>Inicio</p></a
           >
-          <a href="#"
+          <a href="#about-me"
             ><span class="icon"
               ><ion-icon name="person-outline"></ion-icon
             ></span>
@@ -60,8 +60,8 @@
     </div>
   </header>
   <main>
-    <div class="container-home">
-      <section id="home" class="home">
+    <div id="container-home" class="container-home">
+      <section class="home">
         <div class="container">
           <div class="content">
             <h2 class="logo">LShaggyo</h2>
@@ -99,15 +99,16 @@
         </div>
       </section>
     </div>
-    <div class="container-about-me">
+    <div id="about-me" class="container-about-me">
       <section class="about-me">
         <div class="content-about-me">
-          <h2 class="title-about-me">Quien Soy?</h2>
-          <img
+          <h2 class="title-about-me"><span>¿Quien Soy?</span></h2>
+          <div class="container-img"><img
             src="./assets/img/img-profile"
             alt="Foto de perfil de Carlos Guzman"
             class="profile"
           />
+          </div>
           <p class="text-i-am">
             Soy <span>Carlos Guzmán</span>, estudiante de Ing. Informática,
             amante de la tecnología y los videojuegos. Mi portafolio refleja mi
