Progreso seccion sobre mi foto y descripcion

--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
             class="profile"
           />
           </div>
-          <p class="text-i-am">
+          <div class="container-text">
+          <p class="text">
             Soy <span>Carlos Guzmán</span>, estudiante de Ing. Informática,
             amante de la tecnología y los videojuegos. Mi portafolio refleja mi
             pasión por los juegos y mi habilidad en programación. ¡Explora mis
             proyectos y descubre mi creatividad en el mundo de la tecnología!
           </p>
+          </div>        
         </div>
         <div class="personal-row">
           <div class="personal-col">
